--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <p class="lead text-center mt-5" id="result"></p>
     </div>
     <div class="container text-center">
-      <h3>History</h3>
+      <h3 class="mt-5">History</h3>
       <div id="history"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
